--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@ version: '3.4'
 
 services:
   eshopwebmvc:
-    image: ${DOCKER_REGISTRY-}eshopwebmvc
+    image: eshopwebmvc
     build:
       context: .
       dockerfile: src/Web/Dockerfile
   eshoppublicapi:
-    image: ${DOCKER_REGISTRY-}eshoppublicapi
+    image: eshoppublicapi
     build:
       context: .
       dockerfile: src/PublicApi/Dockerfile
